Latest additions and tests. Added Spring injection with Java-based configuration (based in annotations) for instantiating beans and also to load some properties files.